# kensub-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  debian-toolkit-install.sh  docker-compose.yml  docker_build.sh  entrypoint.sh  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database_init.py  main.py  models.py  schemas.py  tasks.py
app/core/: __init__.py  video_processor.py
migrations/: __init__.py  env.py
migrations/versions/: 69affe07eab0_initial_schema.py
